Mon Mar 23 18:26:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_value): missed to change at r17874.  [ruby-core:17595]

Mon Mar 23 18:26:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_join): new API.

	* ext/thread/thread.c (wait_mutex, lock_mutex): wait until the locking
	  thread exits.  [ruby-dev:34856]

Mon Mar 23 17:41:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_load_ok): checks if regular file, except for the
	  platform disallows to open directories, e.g. dosish.
	  [ruby-dev:38097], [Bug #1221]

Mon Mar  9 20:59:24 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_verify): OCSP_basic_verify
	  returns positive value on success, not non-zero.  [ruby-core:21762]
	  backported r22440 from trunk.

Mon Mar  9 10:02:15 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (match_check): check if MatchData is initialized.
	  [ruby-core:18749]

Mon Mar  9 09:56:34 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/rexml/rexml.rb: incremented Ruby::VERSION.  Thanks, Jeremy
	  Kemper.  [ruby-core:20113]

Mon Mar  9 09:52:53 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_getpartial): fflush after read for updating pos in FILE.
	  not portable, I guess.  [ruby-core:21561]

Mon Mar  9 09:04:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (define_final): cannot define finalizer for immediate
	  values.  [ruby-core:21500]

	* gc.c (define_final): freezes or hides internal values.

Mon Mar  9 08:54:47 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (IS_BEG): EXPR_CLASS should be treated like EXPR_BEG.
	  [ruby-core:21453]

Wed Feb 25 15:15:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.h (rb_thread_raised_clear): should not clear flags other than
	  raised flags.  a patch by Tomoyuki Chikanaga <chikanag AT
	  nippon-control-system.co.jp> at [ruby-dev:37794].  [ruby-dev:37776]

Wed Feb 25 15:05:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
